# Reachy_mini_custom

./: README.md  pyproject.toml
reachy_mini_v6/: animations.json  calibration.json  config.json  pc_listen.py  reachy_mini_sdk.py  server.py  ssl.crt  ssl.key
reachy_mini_v6/apps/: face_tracking.py  hand_tracking.py
reachy_mini_v6/calibrations/: 192.168.29.129.json  192.168.29.4.json  HWID_88a29ed14fa1.json  mappings.json
reachy_mini_v6/pi_robot/: robot_server.py  run.sh  setup_autohotspot.sh
reachy_mini_v6/pi_robot/all_files/: stream2.py
reachy_mini_v6/pi_robot/all_files/pi_code_v1/: packages.txt  run.sh  test.py  test2.py
reachy_mini_v6/pi_robot/all_files/pi_code_v2/: robot_server.py  run.sh
reachy_mini_v6/pi_robot/all_files/pi_code_v3/: robot_server.py
reachy_mini_v6/pi_robot/all_files/pi_code_v4/: find_mic.py  robot_server.py  run.sh  test_pi_mic.py
reachy_mini_v6/pi_robot/all_files/pi_code_v5/: pi_mic_test.py  robot_server.py  run.sh  setup_autohotspot.sh
reachy_mini_v6/pi_robot/all_files/scscl/: all_servo_t_m_b.py  gui_lite.py  moving_plarform.py  stewart_platform_gui.py  write.py
reachy_mini_v6/templates/: index.html
scscl/: anim.py  gui_moving_platform.py  ping.py  read.py  single_servo_test.py  sync_write.py  test.py  wheel.py
