[project]
name = "reachy-mini-custom"
version = "6.0.0"
description = "Fleet-ready Master/Slave OS for Reachy Mini v6"
readme = "README.md"
requires-python = "==3.11.14"

dependencies = [
    "faster-whisper==1.2.1",
    "flask-sock==0.7.0",
    "mediapipe==0.10.11",
    "opencv-python==4.13.0.92",
    "piper-tts==1.4.1",
    "pyaudio==0.2.14",
    "pyopenssl==26.0.0",
    "speechrecognition==3.16.0",
    "vosk==0.3.45",
    "webrtcvad==2.0.10"
]
